# blueprint

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: args.rs  cleanpath.rs  config.rs  default.toml  main.rs  parse_config.rs
src/commands/: apply.rs  init.rs  mod.rs
src/package/: mod.rs  package.rs  sources.rs
src/package/source/: mod.rs  pacman.rs  paru.rs  shell.rs
